--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -27,7 +27,7 @@
         <ImageButton
             android:id="@+id/back_button"
             android:layout_width="40dp"
-            android:background="@android:color/transparent"
+            android:background="@android:color/white"
             android:layout_height="40dp"
             android:src="@drawable/ic_arrow_back_ios_new_24px" />
 
@@ -48,14 +48,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:visibility="gone"
-            android:background="@android:color/transparent"
+            android:background="@android:color/white"
             android:src="@drawable/ic_shopping_cart_24px" />
         <ImageButton
             android:id="@+id/ibEdit"
             android:visibility="gone"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@android:color/transparent"
+            android:background="@android:color/white"
             android:src="@drawable/ic_drive_file_rename_outline_24" />
 
     </LinearLayout>
