--- a/app/src/main/res/navigation/admin_nav.xml
+++ b/app/src/main/res/navigation/admin_nav.xml
@@ -45,6 +45,9 @@
         <action
             android:id="@+id/action_upsertBookFragment_to_bookDetailsFragment"
             app:destination="@id/bookDetailsFragment" />
+        <action
+            android:id="@+id/action_upsertBookFragment_to_navigation_books"
+            app:destination="@id/navigation_books" />
     </fragment>
     <fragment
         android:id="@+id/bookDetailsFragment"
